# splitter

./: Cargo.toml  README.md
src/: join.rs  main.rs  split.rs
