[package]
name = "splitter"
version = "0.1.0"
authors = ["r00ster91 <r00ster91@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rfd = "0.3.0"
parse-size = "1.0.0"

# This configuration was made with easy and quick sending of the binary in mind
[profile.release]
opt-level = 'z'
lto = true
panic = 'abort'
codegen-units = 1
